[package]
name = "covid19report"
version = "0.0.1"
authors = ["Branimir Maksimovic"]
edition = "2018"

[dependencies]
serde_json = "1.0"
reqwest = "0.10.4"
base64 = "0.12.0"
csv = "1.1"
futures = "0.3.4"
tokio = "0.2.18"
chrono = "0.4.11"
headers = "0.2.1"
[[bin]]
name = "import_data"
path = "src/main.rs"
